--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ libimobiledevice_la_SOURCES = idevice.c idevice.h \
 
 if WIN32
 libimobiledevice_la_LDFLAGS += -avoid-version -static-libgcc
-libimobiledevice_la_LIBADD += -lole32 -lws2_32 -lgdi32
+libimobiledevice_la_LIBADD += -lole32 -lws2_32 -lgdi32 -liphlpapi
 endif
 
 pkgconfigdir = $(libdir)/pkgconfig
