Add tool to interact with com.apple.mobile.assertion_agent
This lets you do power management interactions.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,6 +20,7 @@ nobase_include_HEADERS = \
 	libimobiledevice/restore.h \
 	libimobiledevice/webinspector.h \
 	libimobiledevice/heartbeat.h \
+	libimobiledevice/power.h \
 	libimobiledevice/diagnostics_relay.h \
 	libimobiledevice/debugserver.h \
 	libimobiledevice/syslog_relay.h \
